Improved conversion from boolean to Boolean.